--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,44 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/*NavBar*/
+.navbar-nav li a{
+  font-size: 17px;
+}
+
+.navbar-brand{
+  letter-spacing: 3px;
+  color: #7F1EFE;
+}
+
+/*Card*/
+.card{
+  transition: all 0.5s ease;
+}
+.card:hover{
+  transform: scale(1.1);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+/* Product */
+.product img {
+  transition: all 0.5s ease;
+}
+.product img:hover{
+  transform: scale(1.1);
+}
+.btn-primary {
+  color: #fff;
+  background-color: #7F1EFE;
+  border-color: #7F1EFE;
+  border-radius: 5px;
+}
+.btn-primary:hover {
+  color: #fff;
+  background-color: #7F1EFE;
+  border-color: #7F1EFE
+}
+
+.carousel-indicators{
+  border-radius: 50%;
+}
